# arch-config

./: Makefile  README.md  pyproject.toml
arch_config/: args.py  main.py  parser.py  test.py
arch_config/tasks/: __init__.py  development.py  terminal.py  utilities.py
arch_config/utils/: color.py  system.py  task.py
dots/: .gitconfig  .gitignore_global  .gitmessage  custom_functions.zsh  init.zsh
dots/config/alacritty/: alacritty.toml
dots/config/gtk-3.0/: settings.ini
dots/config/helix/: config.toml  languages.toml
dots/config/nvim/: init.lua  lazy-lock.json
dots/config/nvim/lua/custom/plugins/: ast-grep.lua  context.lua  copilot.lua  diffview.lua  init.lua  log-highlight.lua  markdown-preview.lua  mason-formatters.lua  mason-lsp.lua  null-ls.lua  nushell.lua  nvim-ufo.lua  oil.lua  rustacean.lua  syntax.lua  themes.lua  todo-comments.lua  vimtex.lua
dots/config/nvim/lua/helpers/: lsp.lua
dots/config/nvim/lua/kickstart/plugins/: debug.lua
dots/config/rofi/: config.rasi  media.sh  todo.sh
dots/config/sxhkd/: sxhkdrc
